---------------

21/9/98
-------

Julian:

- Made makefiles for wxMotif source directory and minimal sample.

- First go at wxApp, wxWindow, wxDialog, wxPen, wxBrush, wxFont,
  wxColour, wxButton, wxCheckBox, wxTextCtrl, wxStaticText,
  wxMenu, wxMenuItem, wxMenuBar

12/11/98
--------

It's a long time since I updated this file. Previously done:

- wxFrame, wxDialog done.
- wxScrolledWindow done (but backing pixmap not used at present).
- wxBitmap done though could be tidied it up at some point.
- Most basic controls are there, if not rigorously tested.
- Some MDI support (menus appear on child frames at present).
- wxNotebook almost done.
- wxToolBar done (horizontal only, which would be easy to extend
  to vertical toolbars).

More recently:

- Colour and font changing done (question mark over what happens
  to scrollbars).
- Accelerators done (for menu items and buttons). Also event loop
  tidied up in wxApp so that events are filtered through ProcessXEvent.
- wxWindow::GetUpdateRegion should now work.

25/11/98
--------

- Reimplemented MDI using wxNotebook instead of the MDI widgets, which
  were too buggy (probably not design for dynamic addition/removal of
  child frames).
- Some improvements to the wxNotebook implementation.
- wxToolBar now uses a bulletin board instead of a form, in an attempt
  to make it possible to add ordinary wxControls to a toolbar.
- Cured problem with not being able to use global memory operators,
  by defining two more global operators, so that the delete will match
  the debugging implementation.
- Added wxUSE_DEBUG_NEW_ALWAYS so we can distinguish between using
  global memory operators (usually OK) and #defining new to be
  WXDEBUG_NEW (sometimes it might not be OK).
- Added time.cpp to makefile; set wxUSE_DATETIME to 1.
- Added a parent-existance check to popup menu code to make it not crash.
- Added some optimization in wxWindow::SetSize to produce less flicker.
  It remains to be seen whether this produces any resize bugs.